<?xml version="1.0"?>
<package format="2">

	<name>cob_environment_perception_experimental</name>

	<description>
		Metapackage for experimental 3D environment perception algorithms.
	</description>

	<version>1.0.0</version>
	<license>LGPL</license>

	<maintainer email="josh@ipa.fhg.de">Joshua Hampp</maintainer>

	<url>http://wiki.ros.org/cob_environment_perception_experimental</url>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>brics_actuator</exec_depend>
	<exec_depend>cob_3d_experience_mapping</exec_depend>
	<exec_depend>cob_3d_mapping_demonstrator</exec_depend>
	<exec_depend>cob_3d_mapping_gazebo</exec_depend>
	<exec_depend>cob_3d_mapping_geometry_map_v2</exec_depend>
	<exec_depend>cob_3d_mapping_submodules</exec_depend>
	<exec_depend>cob_3d_view_cells</exec_depend>
	<exec_depend>liblemon</exec_depend>
	<exec_depend>libnuklei</exec_depend>

	<export>
		<metapackage/>
	</export>
</package>
